Thu Oct 24 16:24:53 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (main): Use elements of type `struct argp_child' for KIDS.

Mon Oct  7 16:38:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (trivfs_S_file_get_storage_info): If necessary to enforce
 	security, make a copy of STORE and inactivate it before returning.

Thu Sep 26 14:26:17 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (trivfs_S_file_check_access): Function removed (trivfs
	default is now sufficient).

Tue Sep 24 15:52:04 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (trivfs_S_file_check_access): New function.
	(check_open_hook): Return EROFS if O_WRITE on a readonly device.

Mon Sep 23 17:21:23 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (trivfs_append_args): Make ARGZ_LEN of type `size_t *'.
	Narrow scope of BUF.
	<argz.h>: New include.

Thu Sep 19 18:12:48 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (trivfs_append_args): New function.

Wed Sep 18 15:16:27 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (trivfs_S_io_read, trivfs_S_io_write): Use void * buffers.
	* open.h (open_read, open_write): Likewise.
	* open.c (open_read, open_write): Likewise.
	* dev.h (struct dev, dev_read, dev_write): Likewise.
	* dev.c (dev_buf_fill, dev_read, dev_write): Likewise.
	* pager.c (pager_read_page): Cast BUF into void ** for dev_read.

	* storeio.c (main): Use STORE_PARAMS variable to get result from
	parsing STORE_ARGP.

	* dev.c (dev_open): Remove CLASSES argument to store_parsed_open.

Thu Sep 19 17:18:11 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(storeio): Deleted special dependencies.

Fri Sep 13 11:05:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (argp_program_version): New variable.
	<version.h>: New include.

Tue Sep 10 17:13:55 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dev.c (dev_rw): Return EINVAL instead of EIO for too-large offsets.
